--- a/iframe.html
+++ b/iframe.html
@@ -365,7 +365,7 @@
   rel="stylesheet"
 />
 
-  <script type="module" crossorigin src="./assets/iframe-9jtpU3vm.js"></script>
+  <script type="module" crossorigin src="./assets/iframe-yHxchISv.js"></script>
 </head>
 
 <body>
