--- a/iframe.html
+++ b/iframe.html
@@ -365,7 +365,7 @@
   rel="stylesheet"
 />
 
-  <script type="module" crossorigin src="./assets/iframe-HNIkBU8F.js"></script>
+  <script type="module" crossorigin src="./assets/iframe-Um6_r2aN.js"></script>
 </head>
 
 <body>
